Add pianoforte demo logo

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,3 +1,8 @@
+// Icons
+
+@import '~@creative-tim-official/argon-dashboard-free/assets/vendor/nucleo/css/nucleo.css';
+@import '~@creative-tim-official/argon-dashboard-free/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css';
+
 // Core
 
 @import '~@creative-tim-official/argon-dashboard-free/assets/scss/custom/functions';
